toLocaleLowerCase and toLocaleUpperCase do not throw on empty string https://bugs.webkit.org/show_bug.cgi?id=250903 rdar://104568214

Reviewed by Alexey Shvayka.

This patch aligns our toLocaleLowerCase and toLocaleUpperCase for invalid locale tag + empty string edge case to the spec.
We should optimize empty string case only when locale is not specified.

* JSTests/stress/empty-string-locale-case-convert.js: Added.
(shouldThrow):
* Source/JavaScriptCore/runtime/StringPrototype.cpp:
(JSC::toLocaleCase):

Canonical link: https://commits.webkit.org/259242@main